# purldb-toolkit

./: AUTHORS.rst  Makefile  README.rst  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst
docs/source/purldb-toolkit/: testing.rst
src/purldb_toolkit/: cli_test_utils.py  purlcli.py
tests/: test_purlcli.py  test_purlcli_live.py
tests/data/purlcli/: expected_metadata_output.json  expected_metadata_output_unique.json
