[metadata]
name = purldb-toolkit
version = 0.2.0
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = "A toolkit and library to use the PurlDB and its API"
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/purldb-toolkit

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities
    purl
    Package-URL
    Git
    metadata
    package
    dependencies
    open source
    package
    sca
    scan

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    README.rst

[options]
python_requires = >=3.9

package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

install_requires =
    click >= 6.7, !=7.0
    fetchcode
    packageurl_python >= 0.13.4
    requests >= 2.7.0


[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest >= 7.0.1
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    twine
    ruff
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
    bump-my-version
    commoncode

[options.entry_points]
console_scripts =
    purlcli = purldb_toolkit.purlcli:purlcli
